<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/llMain"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/weight"
        android:inputType="number"
        android:id="@+id/edtwt"
        android:autofillHints="">
    </EditText>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heightft"
        android:layout_margin="10dp"
        android:inputType="number"
        android:id="@+id/edthtft"
        android:autofillHints="">
    </EditText>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heightin"
        android:layout_margin="10dp"
        android:inputType="number"
        android:id="@+id/edthtin"
        android:autofillHints="">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button"
        android:layout_margin="10dp"
        android:id="@+id/btn">
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/result"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/txt">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/condition"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/txt2">
    </TextView>

</LinearLayout>